# face-registration

./: README.md  app.py  pyproject.toml  schema.py  user_data.json  users.pickle  utils.py
static/: app.js  recognize.js
static/assets/css/: main.css
templates/: index.html  recognize.html
